kubernetes/apps/monitoring/uptime-kuma-infra/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: uptime.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: http
  hostnames:
    - uptime.krapulax.dev
  rules:
    - backendRefs:
        - name: uptime-kuma
          namespace: monitoring
          port: 3001
